fix bug overflow on blog list page for IOS

--- a/theme/minastik/css/minastik/blog.css
+++ b/theme/minastik/css/minastik/blog.css
@@ -72,6 +72,7 @@
 
 .blog-item-body .short-desc {
   width: 100%;
+  max-height: 70px;
   margin: 0 0 40px 0;
   color: rgb(70, 68, 68);
   display: -webkit-box;
